--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
   display: flex;
   flex-direction: column;
   margin: auto;
+  flex: 1;
 }
 
 /* Main Section */
@@ -40,19 +41,18 @@ body{
   font-size: 20px;
   color: #f9faf8;
   margin-right: auto;
+  font-weight: bold;
 }
 
 .links {
   display: flex;
   gap: 20px;
+  font-weight: lighter;
 }
 
 .button {
   display: flex;
 }
-/* .links a {
-
-} */
 
 .hero-img img {
   width: 750px;
@@ -85,8 +85,11 @@ body{
   display: flex;
   flex-wrap: wrap;
   font-size: 15px;
-  color: #c1c2c4;
+  color: #d1d1d4;
+  font-weight: lighter;
 }
+
+
 
 /* Information Section */
 
@@ -94,48 +97,110 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 90px;
 }
 
 .header-text {
-  font-size: 36px;
+  font-size: 30px;
   font-weight: bolder;
   color: #1F2937;
+  padding-top: 28px;
+  padding-bottom: 40px;
 }
 
 .images {
   display: flex;
+  justify-content: center;
+  gap: 40px;
 }
 
 .images img {
-  border: 4px solid rgb(53, 137, 241);
-  border-radius: 25px;
+  border: 3px solid rgb(53, 137, 241);
+  border-radius: 12px;
+  width: 150px;
 }
 
 .potrait-image {
   display: flex;
   flex-direction: column;
+  flex-basis: 150px;
 }
+ .info-text {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 16px;
+  color: #535455;
+ text-align: center;
+  padding-top: 8px;
+ }
 
+
+ 
 /* Quote Section */
 
 .quote-section {
+  padding-top: 350px;
   display: flex;
   flex-direction: column;
-  background-color: #e5e7eb;
+  background-image: url("images/blackbeard-quote.png");
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position:center;
+
 }
 
-.quote {
-  font-size: 36px;
-  color: #1F2937;
+.quotee {
+  display: flex;
+  font-size: 16px;
+  color: #040404;
   font-style: italic;
+  margin-left: auto;
+  margin-top: auto;
+  padding-right: 100px;
+  padding-bottom: 20px;
 }
+
+
+
 
 /* Sign-up section */
 
 .signup {
   display: flex;
-  background-color: #3882f6;
+  justify-content: center;
+  align-items: center;
+  padding: 90px;
+  background-color: #e5e7eb;
 }
+
+.msg-button {
+  display: flex;
+  background-color: #3882f6;
+  flex-wrap: wrap;
+  padding: 45px 110px;
+  border-radius: 8px;
+  gap: 120px;
+}
+
+.main-msg {
+  font-size: 20px;
+  color: #f9faf8;
+  font-weight: bold;
+}
+
+.sub-msg {
+  font-size: 15px;
+  color: #dedfdc;
+  font-weight: lighter;
+}
+
+.msg-button button {
+  border: 2px solid #f9faf8;;
+  font-weight: bolder;
+  font-size: medium;
+  padding: 0px 30px;
+}
+
 
 /* footer */
 
@@ -145,7 +210,10 @@ body{
   align-items: center;
   background-color: #1F2937;
   color: #f9faf8;
+  padding: 18px;
 }
+
+
 
 /* Adjustments */
 
@@ -159,5 +227,4 @@ button {
   background-color: #3882f6;
   color: #f9faf8;
   border-radius: 8px;
-  padding: 4px 25px;
 }
